<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BioFragment" >

    <TextView
        android:id="@+id/tvAtAGlanceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvLivedInfo"
        android:layout_below="@+id/tvLivedInfo"
        android:text="@string/atAGlanceTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/CustomBlue" />

    <TextView
        android:id="@+id/tvAtAGlanceInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAtAGlanceTitle"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/tvAtAGlanceTitle"
        android:text="@string/atAGlanceInfo"
        android:scrollbars="vertical"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvLivedTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/livedTitle"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/CustomBlue"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvLivedInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvLivedTitle"
        android:text="@string/livedInfo"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

</RelativeLayout>